Style changes made

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="topBar">
-
+  <div class="topBar topBar-main">
+    <span>Some text here</span>
+    <a class="topBar-close" href="#">X</a>
   </div>
+  <div class="topBar topBar-lever">Pull</div>
 </body>
 </html>
