Added link to lever

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <span>Some text here</span>
     <a class="topBar-close" href="#">X</a>
   </div>
-  <div class="topBar topBar-lever">Pull</div>
+  <div class="topBar topBar-lever"><a href="#">Pull</a></div>
 </body>
 </html>
